--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "firebase": "^2.4.1",
-    "react-native": "^0.19.0"
+    "react-native": "^0.19.0",
+    "react-native-timer": "^1.0.3"
   }
 }
