--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "firebase": "^2.4.1",
+    "react-mixin": "^2.0.2",
     "react-native": "^0.19.0",
-    "react-native-timer": "^1.0.3"
+    "react-native-timer": "^1.0.3",
+    "react-timer-mixin": "^0.13.3"
   }
 }
