--- a/ios/Devil's Reminder.xcodeproj/xcshareddata/xcschemes/myApp.xcscheme
+++ b/ios/Devil's Reminder.xcodeproj/xcshareddata/xcschemes/myApp.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "myApp.app"
-               BlueprintName = "myApp"
-               ReferencedContainer = "container:myApp.xcodeproj">
+               BlueprintName = "Devil&apos;s Reminder"
+               ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,27 +29,27 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "myAppTests.xctest"
-               BlueprintName = "myAppTests"
-               ReferencedContainer = "container:myApp.xcodeproj">
+               BuildableName = "Devil&apos;s Reminder.xctest"
+               BlueprintName = "Devil&apos;s ReminderTests"
+               ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "myAppTests.xctest"
-               BlueprintName = "myAppTests"
-               ReferencedContainer = "container:myApp.xcodeproj">
+               BuildableName = "Devil&apos;s Reminder.xctest"
+               BlueprintName = "Devil&apos;s ReminderTests"
+               ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -58,19 +58,22 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "myApp.app"
-            BlueprintName = "myApp"
-            ReferencedContainer = "container:myApp.xcodeproj">
+            BlueprintName = "Devil&apos;s Reminder"
+            ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -78,18 +81,18 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "myApp.app"
-            BlueprintName = "myApp"
-            ReferencedContainer = "container:myApp.xcodeproj">
+            BlueprintName = "Devil&apos;s Reminder"
+            ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -97,8 +100,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "myApp.app"
-            BlueprintName = "myApp"
-            ReferencedContainer = "container:myApp.xcodeproj">
+            BlueprintName = "Devil&apos;s Reminder"
+            ReferencedContainer = "container:Devil&apos;s Reminder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
